@@ -1,5 +1,12 @@
 2018-03-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
+	* arts-2-3-998
+
+	* src/m_radiation_field.cc (doit_i_fieldClearskyPlaneParallel):
+	Now also returns transmission data.
+
+2018-03-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
 	* arts-2-3-997
 
 	* src/m_radiation_field.cc (doit_i_fieldClearskyPlaneParallel):
